# sam-rust-sqs-lambda-reader

./: .gitignore  Cargo.toml  README.md  template.yaml
events/: event.json
src/: main.rs  models.rs
